# agents

./: .gitignore  README.md  TREE_SITTER_REWRITE_PLAN.md  improvements.md  pyproject.toml  report.md  requirements.txt  structure.md  task.md
agents/: __init__.py  __main__.py  agent_pool.py  agents.py  ai_client.py  basic_agent.yaml  git_utils.py  llm_backend.py  manipulator_agent.yaml  minion_agent.yaml  session.py  sub_agent.yaml  ui.py
agents/backends/: __init__.py  anthropic_backend.py  gemini_backend.py  openai_backend.py
agents/tools/: __init__.py  functions.py  mcp_client.py  parser.py  summarize.py  web_browser.py
tests/: test_code_scissors.py  test_code_scissors_extended.py  test_find_replace.py  test_manipulator.py  test_truncate_output.py  test_web_tools.py
